# csgo

./: .gitattributes  .gitignore  .gitmodules  ROADMAP.md  pyproject.toml
data/: items.json  items.sqlite  localization.zh-CN.json  scan_results.sqlite  steamdt_prices.sqlite
examples/: catalog_storage_example.py  history_crawler_example.py  igxe_history_example.py  igxe_scanner_example.py  market_clients_example.py  scanner_example.py  static_catalog_sync_example.py  steam_market_example.py  steamdt_catalog_price_crawl_example.py  steamdt_catalog_sync_example.py  steamdt_ev_scan_example.py  steamdt_full_crawl_example.py  steamdt_private_example.py  steamdt_resume_then_full_ev.py  steamdt_scanner_example.py  web_app_example.py
src/cs2_tradeup/: __init__.py  catalog.py  catalog_sync.py  engine.py  exceptions.py  history_market.py  localization.py  market.py  models.py  price_anomaly.py  price_crawl.py  reverse.py  scan_storage.py  scanner.py  scheduler.py  static_catalog.py  steam_market.py  steamdt_market.py  steamdt_scan.py  webapp.py
src/cs2_tradeup/templates/: base.html  crawl_progress.html  ev.html  optimizer.html  prices.html
tests/: test_catalog_storage.py  test_catalog_sync.py  test_history_market.py  test_market_api.py  test_price_anomaly.py  test_price_crawl.py  test_reverse_generation.py  test_scan_storage.py  test_scanner.py  test_static_catalog.py  test_steam_market.py  test_steamdt_market.py  test_steamdt_scan.py  test_tradeup_engine.py  test_webapp.py
